--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -1,5 +1,6 @@
 <% @merchants.each do |merchant| %>
   <ul>
-    <li> <%= merchant.name %> </li>
+    <li> Name: <%= merchant.name %> </li>
+    <li> ID: <%= merchant.id %> </li>
   </ul>
 <% end %>
