--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,6 +6,12 @@
   </head>
 
   <body>
+    <nav>
+      <h1><a>Little Shop</a></h1>
+      <h2><a>Merchants</a></h2>
+      <h2><a>Items</a></h2>
+      <h2><a>Invoices</a></h2>
+    </nav>
 
     <%= yield %>
 
