add a path to a merchants/new page and add an erb file for this page

--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -1,5 +1,11 @@
+
 <form action="/merchants" method="post">
   <p>Create New Merchant:</p>
-  <input type='text' name='merchant[name]'/><br/>
-  <input type='submit'/>
+  <label>Name</label>
+  <input type='text' name='merchant[name]' placeholder="Henry's Cafe"/><br/>
+  <input type='submit' value='Create Merchant'/>
+</form>
+
+<form action="/merchants">
+  <input type='submit' value= 'Cancel'/>
 </form>
