fix new merchants route and create buttons

--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -2,10 +2,10 @@
 <form action="/merchants" method="post">
   <p>Create New Merchant:</p>
   <label>Name</label>
-  <input type='text' name='merchant[name]' placeholder="Henry's Cafe"/><br/>
-  <input type='submit' value='Create Merchant'/>
+  <input type='text' name='merchant[name]' placeholder="Henry's Cafe"/><br>
+  <button type='submit'>Create Merchant</button>
 </form>
 
 <form action="/merchants">
-  <input type='submit' value= 'Cancel'/>
+  <button type='submit'>Cancel</button>
 </form>
