adds linking to right side of navbar

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,9 +12,9 @@
       <h1>Little Shop</h1>
       <nav>
         <ul>
-          <li>Merchants</li>
-          <li>Items</li>
-          <li>Invoices</li>
+          <li><a href="/merchants">Merchants</a></li>
+          <li><a href="/items">Items</a></li>
+          <li><a href="/invoices">Invoices</a></li>
         </ul>
       </nav>
     </header>
