--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -23,6 +23,11 @@ nav li {
   padding: 17px 10px;
 }
 
+nav li a {
+  text-decoration: none;
+  color: black
+}
+
 nav li:hover {
   background: #696969;
   color: white;
