add styling to merchant index page

--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -33,3 +33,16 @@ nav li:hover {
   color: white;
   cursor: pointer;
 }
+
+/* Styling for Index Pages */
+
+.index {
+  margin: 5% 5%;
+}
+
+.dashboard-link {
+}
+
+.index-title {
+  font-size: 36px;
+}
