--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -1,8 +1,19 @@
+<div class="index">
+  <a href="/" class="dashboard-link">Dashboard</a>
+  <br/>
+  <h1 class="index-title">Merchants</h1>
+  <a href="/merchants/new">Create A New Merchant</a>
+  <br/>
+  <% @merchants.each do |merchant| %>
+    <div id="merchant-<%= merchant.id %>" class="merchant">
+      <a href="/merchants/<%= merchant.id %>"> <%= merchant.name %> </a>
+      <a href="/merchants/<%= merchant.id %>/edit">Edit</a>
 
-<h1>Merchants</h1>
-<% @merchants.each do |merchant| %>
-  <ul>
-    <li> Name: <%= merchant.name %> </li>
-    <li> ID: <%= merchant.id %> </li>
-  </ul>
-<% end %>
+      <form action="/merchants/<%= merchant.id %>" method="POST">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="delete"/>
+      </form>
+
+    </div>
+  <% end %>
+</div>
