correct route for merchants dashboard

--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -1,5 +1,5 @@
 <div class="index">
-  <a href="/" class="dashboard-link">Dashboard</a>
+  <a href="/merchants-dashboard" class="dashboard-link">Dashboard</a>
   <br/>
   <h1 class="index-title">Merchants</h1>
   <a href="/merchants/new">Create A New Merchant</a>
