add button styling

--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -11,7 +11,7 @@
 
       <form action="/merchants/<%= merchant.id %>" method="POST">
         <input type="hidden" name="_method" value="DELETE">
-        <input type="submit" value="delete"/>
+        <input type="submit" class="btn btn-dark" value="delete"/>
       </form>
 
     </div>
