--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -5,15 +5,21 @@
   <a href="/merchants/new">Create A New Merchant</a>
   <br/>
   <% @merchants.each do |merchant| %>
-    <div id="merchant-<%= merchant.id %>" class="merchant">
-      <a href="/merchants/<%= merchant.id %>"> <%= merchant.name %> </a>
-      <a href="/merchants/<%= merchant.id %>/edit">Edit</a>
-
-      <form action="/merchants/<%= merchant.id %>" method="POST">
-        <input type="hidden" name="_method" value="DELETE">
-        <input type="submit" class="btn btn-dark" value="delete"/>
-      </form>
-
+    <div id="merchant-<%= merchant.id %>" class="merchant" class="container">
+      <div class="row">
+        <div class="col-7">
+          <a href="/merchants/<%= merchant.id %>"> <%= merchant.name %> </a>
+        </div>
+        <div class="col-1">
+          <a href="/merchants/<%= merchant.id %>/edit">Edit</a>
+        </div>
+        <div class="col-1">
+          <form action="/merchants/<%= merchant.id %>" method="POST">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" class="btn btn-dark" value="delete"/>
+          </form>
+        </div>
+      </div>
     </div>
   <% end %>
 </div>
