--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -1,8 +1,8 @@
 <form action="/items" method="post">
   <p>Create New Item:</p>
   <label>Name</label>
-  <input type='text' name='item[name]' placeholder="I'm an Item"/><br>
-  <button type='submit'>Create Item</button>
+  <input type='text' name='item[name]' placeholder="Henry's Cafe"/><br>
+  <button type='submit'>Create Merchant</button>
 </form>
 
 <form action="/items">
