--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -6,7 +6,7 @@
   <br/>
   <% @items.each do |item| %>
     <div id="item-<%= item.id %>" class="item">
-      <a href="/items/<%= item.id %>"> <%= item.name %> </a>
+      <a href="/items/<%= item.id %>"> <%= item.title %> </a>
       <a href="/items/<%= item.id %>/edit">Edit</a>
 
       <form action="/items/<%= item.id %>" method="POST">
