couple quick edits

--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -9,7 +9,6 @@
   <ul>
     <li><img src="item.png" alt="image placeholder"/>
     <li><a href="/items/<%=item.id%>"><%=item.title.truncate_words(3)%></a></li></br>
-    <li>$ <%='%.2f' % item.price%></li></br>
+    <li>$ <%='%.2f' % item.unit_price%></li></br>
   </ul>
 <% end %>
-
