--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -1,5 +1,11 @@
-<section class="index">
-  <section class="view-title-bar" display: flex>
+<!-- <style>
+.fakeimg {
+    height: 200px;
+    background: #aaa;
+}
+</style> -->
+<section>
+  <section class="jumbotron text-center" style="margin-bottom:0">>
     <a href="/merchants-dashboard" class="dashboard-link">Dashboard</a>
     <h1 class="index-title">Merchants</h1>
     <a href="/merchants/new" class="btn btn-info">Create A New Merchant</a>
