center merchants title

--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -1,13 +1,7 @@
-<!-- <style>
-.fakeimg {
-    height: 200px;
-    background: #aaa;
-}
-</style> -->
-<section>
-  <section class="jumbotron text-center" style="margin-bottom:0">>
+<section class="index">
+  <section class="jumbotron text-center" style="margin-bottom:5%">
     <a href="/merchants-dashboard" class="dashboard-link">Dashboard</a>
-    <h1 class="index-title">Merchants</h1>
+    <h1 class="index-title"style="margin:5%">Merchants</h1>
     <a href="/merchants/new" class="btn btn-info">Create A New Merchant</a>
   </section>
   <% @merchants.each do |merchant| %>
