--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -11,12 +11,12 @@
           <a href="/merchants/<%= merchant.id %>"> <%= merchant.name %> </a>
         </div>
         <div class="col-1" >
-          <a href="/merchants/<%= merchant.id %>/edit" class="btn btn-dark">Edit</a>
+          <a href="/merchants/<%= merchant.id %>/edit" id="edit-btn" class="btn">Edit</a>
         </div>
         <div class="col-1">
           <form action="/merchants/<%= merchant.id %>" method="POST">
             <input type="hidden" name="_method" value="DELETE">
-            <input type="submit" value="delete" class="btn btn-dark"/>
+            <input type="submit" value="delete"  class="btn-primary"/>
           </form>
         </div>
       </div>
