--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -1,4 +1,4 @@
-<p><a href="/items/dashboard">Dashboard</a></p>
+<p><a href="/items-dashboard">Dashboard</a></p>
 <h1>Items</h1>
 
 <form method="get" action="items/new">
