--- a/app/views/invoices/index.erb
+++ b/app/views/invoices/index.erb
@@ -8,7 +8,7 @@
     <div id="invoice-<%= invoice.id %>" class="container">
       <div class="row">
         <div class="col">
-          <a href="/invoices/<%= invoice.id %>" class="badge badge-warning" id="invoice-link"> <%= invoice.name %> </a>
+          <a href="/invoices/<%= invoice.id %>" class="badge" id="invoice-link"> <%= invoice.name %> </a>
         </div>
         <div class="col-1" >
           <a href="/invoices/<%= invoice.id %>/edit" class="btn btn-info">Edit</a>
