working on styles for item.  Changed and added Invoice Items validations spec.

--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -103,3 +103,11 @@ nav li:hover {
   /* display: inline-block; */
 
 }
+
+/* Styling for item page */
+.image-size {
+  width: 200px;
+  height: 200px;
+}
+
+/* Styling for item page */
