finish best merchants section

--- a/app/views/merchants/merchants-dashboard.erb
+++ b/app/views/merchants/merchants-dashboard.erb
@@ -6,10 +6,14 @@
   <section class="best-merchants">
     <div class ="row best-merchants">
       <div class="col best-merchants">
-        <p>Merchant With Most Items: <%= @most_items.name %></p>
+        <p>Merchant With Most Items:</p>
+        <br>
+        <p><%= @most_items.name %></p>
       </div>
       <div class="col best-merchants">
-        <p>Merchant With Highest Price Item: <%= @highest_priced_item.name %></p>
+        <p>Merchant With Highest Price Item:</p>
+        <br>
+        <p><%= @highest_priced_item.name %></p>
       </div>
     </div>
   </section>
