add link to name of merchant with most items

--- a/app/views/merchants/merchants-dashboard.erb
+++ b/app/views/merchants/merchants-dashboard.erb
@@ -8,7 +8,7 @@
       <div class="col best-merchants">
         <p>Merchant With Most Items:</p>
         <br>
-        <p><%= @most_items.name %></p>
+        <a href="/merchants/<%=@most_items.id%>"><p><%= @most_items.name %></p></a>
       </div>
       <div class="col best-merchants">
         <p>Merchant With Highest Price Item:</p>
