--- a/app/views/invoices/show.erb
+++ b/app/views/invoices/show.erb
@@ -1,7 +1,7 @@
 <section class="index">
   <!-- -->
-  <section class="jumbotron text-center" style="margin-bottom:5%">
-    <h1 class="index-title">Invoice <%=invoice.id%> - <%=invoice.status%></h1>
+  <section class="jumbotron text-center">
+    <h1 class="index-title">Invoice <%=@invoice.id%> - <%=@invoice.status%></h1>
     <!-- <a href="/merchants/new" class="btn btn-info">Create A New Merchant</a>     Change to edit and delete buttons-->
   </section>
   <!-- get the merchant for the invoice and link -->
