--- a/app/views/invoices/index.erb
+++ b/app/views/invoices/index.erb
@@ -1,4 +1,6 @@
 <h1>Invoices</h1>
 <% @invoices.each do |invoice| %>
-  <%= invoice.merchant_id %>
+  <ul>
+    <li><%= @invoice.status %></li>
+  </ul>
 <% end %>
