stopping point for invoice show page.

--- a/app/views/invoices/index.erb
+++ b/app/views/invoices/index.erb
@@ -1,6 +1,6 @@
 <h1>Invoices</h1>
 <% @invoices.each do |invoice| %>
   <ul>
-    <li><%= @invoice.status %></li>
+    <li><%= @invoice.id %></li>
   </ul>
 <% end %>
