adds bottom to item index

--- a/app/public/styles.css
+++ b/app/public/styles.css
@@ -115,6 +115,20 @@ nav li:hover {
   margin-right: 5%;
   padding: 2%;
 }
+
+.item-container {
+  display: inline-block;
+  text-align: center;
+  vertical-align: top;
+  margin: 2% 2%;
+  background: #DFEBE4;
+  padding: 20px 20px;
+  border-radius: 5%;
+}
+.item-container img {
+  width: 100px;
+  height: auto;
+}
 .row.best-merchants {
   /* background: #364958;
   color: #c9e4ca; */
@@ -129,9 +143,6 @@ nav li:hover {
 
 .merchant-dashboard-page {
   text-align: center;
-
-
-
 }
 
 /* Styling for item page */
