--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -5,12 +5,25 @@
     <a href="/merchants/new" class="btn btn-info">Create A New Item</a>
   </section>
 
+
+  <section>
     <% @items.each do |item| %>
+    <div class="item-container">
+      <div class="col">
+        <img src="item.png" alt="image placeholder"/>
+        <p><a href="/items/<%=item.id%>"><%=item.title.truncate_words(3)%></a></p>
+        <p>$ <%='%.2f' % item.unit_price%></p>
+      </div>
+    </div>
+    <% end %>
+  </section>
+
+    <!-- <% @items.each do |item| %>
       <ul>
         <li><img src="item.png" alt="image placeholder"/>
         <li><a href="/items/<%=item.id%>"><%=item.title.truncate_words(3)%></a></li></br>
         <li>$ <%='%.2f' % item.unit_price%></li></br>
       </ul>
-    <% end %>
+    <% end %> -->
 
 </section>
