--- a/app/views/items/show.erb
+++ b/app/views/items/show.erb
@@ -14,6 +14,6 @@
     <li><a href="/merchants/<%=@item.merchant.id%>"><%= @item.merchant.name %></a></li>
     <li><img src='<%= @item.image %>' alt="placeholder_image" class="image-size"></li>
     <li><%= @item.title %></li>
-    <li>$ <%= '%.2f' % @item.price %></li>
+    <li>$ <%= '%.2f' % @item.unit_price %></li>
     <li><%= @item.description %></li>
   </ul>
