--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -13,7 +13,7 @@
   <p>Description</br>
   <textarea name='item[description]'><%= @item.description %></textarea></p><br/>
   <p>Price</br>
-  <input type='text' name='item[price]' value='<%= @item.price %>'></p></br>
+  <input type='text' name='item[price]' value='<%= @item.unit_price %>'></p></br>
   <p>Image URL</br>
   <input type='text' name='item[image]' value='<%= @item.image %>'></br></br></br>
   <input type='submit' value='Update Item'></p></br>
