adds edit page for invoices.

--- a/app/views/invoices/index.erb
+++ b/app/views/invoices/index.erb
@@ -7,7 +7,7 @@
     <div id="invoice-<%= invoice.id %>" class="container">
       <div class="row">
         <div class="col">
-          <a href="/invoices/<%= invoice.id %>" class="badge" id="invoice-link"> Thing one<%= invoice.id %> </a>
+          <a href="/invoices/<%= invoice.id %>" class="badge" id="invoice-link"> <%= invoice.id %> </a>
         </div>
         <div class="col-1" >
           <a href="/invoices/<%= invoice.id %>/edit" class="btn btn-info">Edit</a>
